--- a/css/topic.css
+++ b/css/topic.css
@@ -137,8 +137,8 @@ body {
 .topic-section__question {
   font-family: var(--font-serif-en);
   font-size: clamp(1.15rem, 3vw, 1.4rem);
-  font-weight: 400;
-  color: var(--clr-ivory);
+  font-weight: 600;
+  color: #f4f0ce;
   line-height: 1.5;
   margin-bottom: var(--sp-3);
 }
